# PoliticalSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
cmake/: Catch2.cmake
docs/diagrams/src/: activity.puml  activity_simulation.puml  component.puml  deployment.puml  object.puml  objects.puml  sequence_party_addition.puml  sequence_voter_reassignment.puml  simulation_state.puml  state.puml  usecase.puml
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  addpartydialog.cpp  addpartydialog.h  addpartydialog.ui  addvoterdialog.cpp  addvoterdialog.h  addvoterdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/models/: IdeologyModel.cpp  IdeologyModel.h  Party.cpp  Party.h  PartyModel.cpp  PartyModel.h  Voter.h  VoterModel.cpp  VoterModel.h
src/utilities/: ScopedFileRemover.h
src/widgets/: PartyChartWidget.cpp  PartyChartWidget.h  SingleVoterIdeologyWidget.cpp  SingleVoterIdeologyWidget.h  VoterIdeologyChartWidget.cpp  VoterIdeologyChartWidget.h
tests/: test_party_db.cpp  test_party_model.cpp  test_party_popularity.cpp  test_voter_model.cpp  tests_party.cpp
